--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,19 +2,21 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Sarafan</title>
+    <title>RadioGaGa</title>
     <!-- версия для разработки, включает отображение полезных предупреждений в консоли -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>-->
 <!--    <link rel="stylesheet" href="../static/main.css">-->
     <script th:inline="javascript">
         var frontendData = [[${frontendData}]];
     </script>
 </head>
 <body>
-<h3>Sarafan</h3>
+<h3>RadioGaGa</h3>
 <div id="app"></div>
-<script src="/js/main.js"></script>
+<!--<script src="/js/main.js"></script>-->
+<script th:src="'http://localhost:8000/main.js'"></script>
+<!--${isDevMode} ? 'http://localhost:8000/main.js' : '/js/main.js'-->
 </body>
 </html>
 
